tests/invalid/trait/method_call_short_ufcs_local_inferred_call_receiver.facet
fn make() -> unrestricted isize {
  1
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x = (make);
  (Runner::run x)
}
